# text2speech

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/text2speech/: __init__.py  config.py  main.py  processor.py  run.py  text_utils.py
