[project]
name = "text2speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oding", email = "admin@avarus.org" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
text2speech = "text2speech:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
