[project]
name = "text2speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oding", email = "admin@avarus.org" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[project.scripts]
text2speech = "text2speech:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
